# jqrs

./: .gitignore  Cargo.toml
src/: filter.rs  json.rs  lexer.rs  lib.rs  main.rs  math.rs  options.rs  parser.rs
src/filter/: lexer.rs  parser.rs  run.rs  run_vm.rs
src/filter/run/: builtins.jq  builtins.rs  gen.rs  run_gen.rs
src/filter/run_vm/: builtins.jq  builtins_vm.rs
src/json/: fmt.rs  lexer.rs  parser.rs
src/utils/: str_ref.rs
tests/: parse_test.rs  run_test.rs
tests/assets/jq/: base.jq.test  manual.jq.test  utf8-truncate.jq.test
tests/assets/json/: small.jsonl
tests/common/: mod.rs
tests/jq/: main.rs  parse_test.rs  run_test.rs
tests/jq/assets/jq/: regex.jq.test
