[package]
name = "jqrs"
version = "0.1.0"
edition = "2021"

[dependencies]
either = "1.15.0"
ouroboros = "0.18.5"

[dependencies.genawaiter]
version = "0.99.1"
default-features = false

[dependencies.logos]
version = "0.15.0"
features = ["forbid_unsafe"]

[dependencies.rug]
version = "1.27"
default-features = false
features = ["integer", "float", "std"]

# Logos requires this to enable tail call optimizations, and avoid stack overflows on big files
# [profile.dev]
# opt-level = 1
