[package]
name = "jqrs"
version = "0.1.0"
description = "rust implementation of the jq commandline JSON processor"
authors = ["Tobias Brandy <tobiasmbrandy@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.5.42", features = ["derive", "cargo"] }
genawaiter = { version = "0.99.1", default-features = false }
logos = { version = "0.15.0", features = ["forbid_unsafe"] }
rug = { version = "1.27", default-features = false, features = [
    "integer",
    "float",
    "std",
] }
either = { version = "1.15.0" }
ouroboros = { version = "0.18.5" }
thiserror = { version = "2.0.10" }
derive_more = { version = "2.0.1", features = ["debug", "display"] }
