[package]
name = "jqrs"
version = "0.1.0"
description = "rust implementation of the jq commandline JSON processor"
authors = ["Tobias Brandy <tobiasmbrandy@gmail.com>"]
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive", "cargo"] }
logos = { version = "0.15.1", features = ["forbid_unsafe"] }
rug = { version = "1.28.0", default-features = false, features = [
    "integer",
    "float",
    "std",
] }
thiserror = { version = "2.0.16" }
derive_more = { version = "2.0.1", features = ["debug", "display"] }
auto_enums = { version = "0.8.7" }
self_cell = { version = "1.2.0" }
im = { version = "15.1.0" }
